tests/test73.rael.exp
Error [tests/test73.rael:2:15]: Expected Number or Range
| log :array at "string"
|               ^
